# arb1

./: .gitignore  .mcpignore  DEVELOPMENT_CYCLE.md  GEMINI.md  MIGRATION_PLAN.md  README.md  README_memory_update.md  SERIALIZATION_ANALYSIS.md  auto_update_memory.sh  code-expert-skeptic.md  test.json  test_supermemory.js  update_memory.py  update_memory_mcp.py  комментарии
.claude/: settings.local.json
.clinerules/: role.md
analyzer/: README.md  arbitrage_analyzer.py  compare_results.py  data_loader.py  quick_compare.py  requirements.txt  run_all_ultra.py  run_backtest.py
arb-finder/: .gitignore  README.md  config.yaml  dashboard.html  main.py  pyproject.toml  web_server.py
arb-finder/core/: __init__.py  arbitrage_finder.py  data_receiver.py  market_state.py  output.py  types.py
barbotine-arbitrage-bot-main/: CODE_ANALYSIS.md  DEVELOPMENT_SPRINTS.md  PROBLEM_ANALYSIS.md  arbitrage_analyzer.py  balance_manager.py  barbotine_tui.py  detailed_test.py  detailed_trades_20251018_100441.txt  exchange_config.py  fee_calculation_demo.py  filter_engine.py  long_test.py  main.py  multi_directional_test_20251018_193613.txt  multi_directional_test_20251018_194744.txt  multi_directional_test_20251018_194824.txt  multi_directional_test_20251018_194927.txt  multi_directional_test_20251018_195826.txt  multi_directional_test_20251018_204055.txt  multi_directional_test_20251018_205021.txt  multi_directional_test_20251018_214204.txt  multi_pair_trader.py  report_generator.py  requirements.txt  run_backtest.py  run_test.py  test_log_20251018_092414.txt  validate_ws_coverage.py  (+1 more)
(+2238 files in other folders)
